fix: add Go custom views endpoint
